# master-thesis

./: .gitignore  README.md  pyproject.toml
calibration/: bsm_gan.py  calibration_bsm.py  calibration_heston.py  calibration_heston_gan.py  heston_gan.py
experiments/: bsm_gan.py  bsm_gan_1.py  bsm_gan_mss.py  bsm_gan_notmss.py  bsm_latent.py  calibrated_bsm_gan.py  calibrated_heston_gan.py  experiment_ornstein_uhlenbeck.py  experiment_ornstein_uhlenbeck_.py  helpers.py  heston_gan.py  heston_latent.py  moment_matching_bsm_gan.py  ornstein_uhlenbeck.py  ornstein_uhlenbeck_div.py  ornstein_uhlenbeck_mod_1.py  ornstein_uhlenbeck_mod_2.py  ornstein_uhlenbeck_mod_3.py  ornstein_uhlenbeck_mod_4.py  sde_lorentz.py
