[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "experiment-tool"
version = "0.1.0"
description = "An example experiment tool"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fire = "*"
numpy = "*"
torch = "*"
matplotlib = "*"
torchcde = "*"
torchsde = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
